[gd_scene load_steps=14 format=2]

[ext_resource path="res://player/Player.gd" type="Script" id=1]
[ext_resource path="res://sounds/player_hurt.wav" type="AudioStream" id=2]
[ext_resource path="res://guns/Gun.tscn" type="PackedScene" id=3]
[ext_resource path="res://shaders/Damage.shader" type="Shader" id=4]
[ext_resource path="res://Joystick/Joystick.tscn" type="PackedScene" id=5]
[ext_resource path="res://UI/Joystick/joystick_bg_R.png" type="Texture" id=6]
[ext_resource path="res://UI/Joystick/ability_btn.png" type="Texture" id=7]
[ext_resource path="res://UI/Joystick/pause_btn.png" type="Texture" id=8]
[ext_resource path="res://UI/Ability/ability_ui_bg.png" type="Texture" id=10]

[sub_resource type="PhysicsMaterial" id=1]

[sub_resource type="ShaderMaterial" id=2]
shader = ExtResource( 4 )
shader_param/active = true

[sub_resource type="Animation" id=3]
resource_name = "Start"
tracks/0/type = "value"
tracks/0/path = NodePath("ShootingDirection/Sprite:material:shader_param/active")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ true, false, true, false, true, false, true, false, true, false ]
}

[sub_resource type="Animation" id=4]
resource_name = "Stop"
tracks/0/type = "value"
tracks/0/path = NodePath("ShootingDirection/Sprite:material:shader_param/active")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}

[node name="Player" type="RigidBody2D" groups=[
"player",
]]
collision_mask = 4
mass = 10.0
physics_material_override = SubResource( 1 )
gravity_scale = 0.0
contacts_reported = 1
contact_monitor = true
linear_damp = 0.5
script = ExtResource( 1 )

[node name="ShootingDirection" type="RayCast2D" parent="."]
enabled = true
cast_to = Vector2( 50, 0 )

[node name="Sprite" type="Sprite" parent="ShootingDirection"]
material = SubResource( 2 )
position = Vector2( 8, 0 )
rotation = 1.57079

[node name="Gun" parent="ShootingDirection" instance=ExtResource( 3 )]

[node name="Hitbox" type="CollisionPolygon2D" parent="."]
visible = false
rotation = 1.57079

[node name="HurtSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 2 )

[node name="BlinkAnimationPlayer" type="AnimationPlayer" parent="."]
anims/Start = SubResource( 3 )
anims/Stop = SubResource( 4 )

[node name="AbilityTimer" type="Timer" parent="."]

[node name="TouchControls" type="CanvasLayer" parent="."]

[node name="MarginContainer" type="MarginContainer" parent="TouchControls"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 96
custom_constants/margin_top = 32
custom_constants/margin_left = 96
custom_constants/margin_bottom = 96
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PauseButton" type="MarginContainer" parent="TouchControls/MarginContainer"]
margin_left = 96.0
margin_top = 32.0
margin_right = 96.0
margin_bottom = 32.0
size_flags_horizontal = 0
size_flags_vertical = 0
custom_constants/margin_left = -96

[node name="Control" type="Control" parent="TouchControls/MarginContainer/PauseButton"]
margin_left = -96.0

[node name="Button" type="TouchScreenButton" parent="TouchControls/MarginContainer/PauseButton/Control"]
modulate = Color( 1, 1, 1, 0.556863 )
normal = ExtResource( 8 )
action = "pause"

[node name="JoystickLeft" parent="TouchControls/MarginContainer" instance=ExtResource( 5 )]
margin_left = 96.0
margin_top = 612.0
margin_right = 493.0
margin_bottom = 984.0
size_flags_horizontal = 0
size_flags_vertical = 8

[node name="AimAndAbility" type="VBoxContainer" parent="TouchControls/MarginContainer"]
margin_left = 1427.0
margin_top = 378.0
margin_right = 1824.0
margin_bottom = 984.0
size_flags_horizontal = 8
size_flags_vertical = 8
custom_constants/separation = -64

[node name="ActivateAbility" type="MarginContainer" parent="TouchControls/MarginContainer/AimAndAbility"]
margin_left = 233.0
margin_right = 397.0
margin_bottom = 254.0
rect_min_size = Vector2( 162, 254 )
size_flags_horizontal = 8
size_flags_vertical = 0

[node name="AbilityBtn" type="TouchScreenButton" parent="TouchControls/MarginContainer/AimAndAbility/ActivateAbility"]
position = Vector2( -22, 0 )
normal = ExtResource( 7 )
action = "activate_pickup"

[node name="AbilityBg" type="TextureRect" parent="TouchControls/MarginContainer/AimAndAbility/ActivateAbility"]
visible = false
modulate = Color( 1, 1, 1, 0.9 )
margin_right = 164.0
margin_bottom = 196.0
rect_min_size = Vector2( 164, 196 )
size_flags_horizontal = 8
size_flags_vertical = 0
texture = ExtResource( 10 )
expand = true
stretch_mode = 6

[node name="CenterContainer" type="CenterContainer" parent="TouchControls/MarginContainer/AimAndAbility/ActivateAbility"]
margin_right = 164.0
margin_bottom = 196.0
rect_min_size = Vector2( 164, 196 )
size_flags_horizontal = 8
size_flags_vertical = 0

[node name="AbilityIcon" type="TextureRect" parent="TouchControls/MarginContainer/AimAndAbility/ActivateAbility/CenterContainer"]
modulate = Color( 1, 1, 1, 0.9 )
margin_left = 60.0
margin_top = 76.0
margin_right = 104.0
margin_bottom = 120.0
rect_min_size = Vector2( 44, 44 )
expand = true
stretch_mode = 6

[node name="JoystickRight" parent="TouchControls/MarginContainer/AimAndAbility" instance=ExtResource( 5 )]
margin_top = 190.0
margin_right = 397.0
margin_bottom = 606.0
rect_min_size = Vector2( 384, 384 )
size_flags_horizontal = 8
size_flags_vertical = 8

[node name="MarginContainer" parent="TouchControls/MarginContainer/AimAndAbility/JoystickRight" index="0"]
margin_bottom = 416.0
custom_constants/margin_bottom = 8

[node name="CenterContainer" parent="TouchControls/MarginContainer/AimAndAbility/JoystickRight/MarginContainer" index="0"]
margin_left = 24.0
margin_top = 53.0
margin_right = 397.0
margin_bottom = 408.0
size_flags_horizontal = 8
size_flags_vertical = 8

[node name="Handle" parent="TouchControls/MarginContainer/AimAndAbility/JoystickRight/MarginContainer/CenterContainer" index="0"]
margin_top = 103.0
margin_bottom = 251.0

[node name="Background" parent="TouchControls/MarginContainer/AimAndAbility/JoystickRight/MarginContainer/CenterContainer" index="1"]
margin_top = 0.0
margin_bottom = 355.0

[node name="3DBackground" parent="TouchControls/MarginContainer/AimAndAbility/JoystickRight" index="1"]
margin_bottom = 416.0
texture = ExtResource( 6 )

[connection signal="body_entered" from="." to="." method="_on_Player_body_entered"]

[editable path="TouchControls/MarginContainer/JoystickLeft"]
[editable path="TouchControls/MarginContainer/AimAndAbility/JoystickRight"]
